tests/invalid/generated_binop_bitxor_none_bytes/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: None = None
    y: bytes = b"hello"
    z = x ^ y
